[tool.poetry]
name = "cipher_yc4021"
version = "0.1.0"
description = "This package will encrypt and decrypt our strings!"
authors = ["YuNa Choi"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
